# Face-Detector-1MB-with-landmark

./: detect.py
Face_Detector_ncnn/: CMakeLists.txt  build.sh  main.cpp  retinaface_api.cpp  retinaface_api.h  retinaface_test.cpp
